@@ -1,0 +1,4 @@
+# Sparc Debian
+TARGETOS = sparc-unknown-linux2.2
+HOSTOS = sparc-unknown-linux2.2
+
